--- a/styles.css
+++ b/styles.css
@@ -94,3 +94,36 @@ a {
 .quote-section div b{
     align-self: flex-end;
 }
+
+.banner{
+    background-color: #3882F6;
+    color: white;
+    max-width: 800px;
+    height: 125px;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 80px;
+    margin-bottom: auto;
+}
+
+.banner button{
+    background-color:#3882F6;
+    border-radius:5px;
+    height:25px;
+    width: 100px;
+    border-color: white;
+    border-style:solid;
+    border-width: 1px;
+    color: white;
+    font-weight: bold;
+}
+
+.banner div h1{
+    margin: 0px;
+    font-size: 16px;
+}
