--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,13 @@ html {
     font-family: 'Hero', Helvetica, sans-serif;
 }
 
+body {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .header {
     color: white;
     background-color: #1F2937;
@@ -105,10 +112,7 @@ a {
     align-items: center;
     justify-content: center;
     gap: 100px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 80px;
-    margin-bottom: auto;
+    margin: 80px auto
 }
 
 .banner button{
@@ -126,4 +130,14 @@ a {
 .banner div h1{
     margin: 0px;
     font-size: 16px;
+}
+
+.footer {
+    height: 80px;
+    color: white;
+    background-color: #1F2937;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: auto;
 }
